--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.gruposei</groupId>
 	<artifactId>gestion_orquestas</artifactId>
-	<version>2.5.6</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>gestion_orquestas</name>
 	<description>gestion_orquestas project</description>
 	<properties>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-			<version>2.5.6</version>
+			<version>2.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -50,12 +50,12 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
-			<version>2.5.6</version>
+			<version>0.9.1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>2.5.6</version>
+			<version>2.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -65,32 +65,32 @@
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>2.5.6</version>
+			<version>11.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-fxml</artifactId>
-			<version>2.5.6</version>
+			<version>11.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>core</artifactId>
-			<version>2.5.6</version>
+			<version>3.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>javase</artifactId>
-			<version>2.5.6</version>
+			<version>3.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
-			<version>2.5.6</version>
+			<version>5.5.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-			<version>2.5.6</version>
+			<version>5.2.8.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -99,7 +99,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>eaea</finalName>
+		<finalName>gestion_orquestas</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
